Support custom openstack CR and galera in tests.
Allow custom OpenstackControlPlane CRs to be used
with automated DP adoption test suits.

TODO: find a better switch for DB backends, see
DBSERVICE_CONTAINER in install_yamls.

Signed-off-by: Bohdan Dobrelia <bdobreli@redhat.com>

--- a/.gitignore
+++ b/.gitignore
@@ -1,5 +1,6 @@
 /local
 /tests/config/tmp
+/tests/config/base/openstack_control_plane_custom.yaml
 /tests/inventory.yaml
 /tests/secrets.yaml
 /tests/playbooks/tmp
