--- a/tests/roles/glance_adoption/tasks/main.yaml
+++ b/tests/roles/glance_adoption/tasks/main.yaml
@@ -2,7 +2,7 @@
   ansible.builtin.shell: |
     {{ shell_header }}
     {{ oc_header }}
-    oc patch openstackcontrolplane openstack --type=merge --patch '
+    oc patch openstackcontrolplane {{ openstack_cr_name }} --type=merge --patch '
     spec:
       glance:
         enabled: true
@@ -28,7 +28,7 @@
   ansible.builtin.shell: |
     {{ shell_header }}
     {{ oc_header }}
-    oc patch openstackcontrolplane openstack --type=merge --patch '
+    oc patch openstackcontrolplane {{ openstack_cr_name }} --type=merge --patch '
     spec:
       glance:
         enabled: true
