Catch up docs with tests
Aling the changed ansible tasks in tests with the manual
steps documented.

Also simplify how we start a helper pod.

Use force_handlers=true for the minimal test playbook so
that the handlers trigger on errors as well.

Signed-off-by: Bohdan Dobrelia <bdobreli@redhat.com>

--- a/tests/roles/ovn_adoption/tasks/main.yaml
+++ b/tests/roles/ovn_adoption/tasks/main.yaml
@@ -42,7 +42,7 @@
     {{ oc_header }}
     oc get svc --selector "statefulset.kubernetes.io/pod-name=ovsdbserver-sb-0" -ojsonpath='{.items[0].spec.clusterIP}'
   register: podified_ovn_sb_ip_result
-  until: podified_ovn_sb_ip_result ss success
+  until: podified_ovn_sb_ip_result is success
   retries: 10
   delay: 2
 
@@ -82,28 +82,21 @@
     state: directory
     mode: "0750"
 
+# NOTE: ansible escapes JSON in shell so this task and the documented manual command differs.
+# The shell equivalent of getting this as oc_run_args.json:
+# cat tmp/ovn/oc_run_args.yaml | python -c "import json, yaml, sys; print(json.dumps(yaml.safe_load(sys.stdin)))"
 - name: prepare oc run args file
   copy:
     content: "{{ oc_run_args }}"
-    dest: "{{ ovn_copy_tmp_dir }}/oc_run_args.yaml"
-  register: oc_run_args_file
-
-- name: set fact for oc run command
-  ansible.builtin.set_fact:
-    oc_run_cmd: >-
-      oc delete pod adoption --ignore-not-found=true;
-      oc run adoption
-      --image {{ ovn_image }}
-      --overrides='$(cat {{ playbook_dir }}/{{ ovn_copy_tmp_dir }}/oc_run_args.yaml)';
-      oc wait --for=condition=Ready pod adoption --timeout=30s
+    dest: "{{ ovn_copy_tmp_dir }}/oc_run_args.json"
 
 - name: start an adoption helper pod
   ansible.builtin.shell: |-
     {{ shell_header }}
     {{ oc_header }}
-    
-    OCRUN="{{ oc_run_cmd }}"
-    eval $OCRUN
+    oc delete pod adoption --ignore-not-found=true;
+    oc apply -f {{ playbook_dir }}/{{ ovn_copy_tmp_dir }}/oc_run_args.json;
+    oc wait --for=condition=Ready pod adoption --timeout=30s
   changed_when: true
   notify: stop adoption helper pod
 
@@ -140,7 +133,6 @@
     {{ oc_header }}
     {{ ovn_copy_shell_vars }}
 
-    mkdir -p {{ ovn_copy_tmp_dir }}
     cd {{ ovn_copy_tmp_dir }}
 
     oc exec adoption -- bash -c "ovsdb-client backup tcp:$SOURCE_OVSDB_IP:6641 > /backup/ovs-nb.db"
