--- a/tests/playbooks/test_minimal.yaml
+++ b/tests/playbooks/test_minimal.yaml
@@ -19,6 +19,7 @@
 - name: Adoption
   hosts: local
   gather_facts: no
+  force_handlers: true
   module_defaults:
     ansible.builtin.shell:
       executable: /bin/bash
