Fix all linting errors
Signed-off-by: Bohdan Dobrelia <bdobreli@redhat.com>

--- a/tests/playbooks/test_minimal.yaml
+++ b/tests/playbooks/test_minimal.yaml
@@ -18,6 +18,7 @@
 
 - name: Adoption
   hosts: local
+  force_handlers: true  # required to remove the helper pod
   gather_facts: no
   force_handlers: true
   module_defaults:
